install/soft/iptables
# Generated by iptables-save v1.4.7 on Sun Nov 20 16:17:22 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 993 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 995 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 587 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 465 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 143 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 110 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 109 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 25 -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8000 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8010 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8020 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Sun Nov 20 16:17:22 2016
